// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Headline /> should render with default props 1`] = `
<h1
  className="cIqFck"
>
  Headline
</h1>
`;

exports[`<Headline /> should render with different props 1`] = `
<h1
  className="eyJdkN"
  color="#fff"
>
  Headline
</h1>
`;
